feat(auth): Improve authentication and error handling