@@ -9,8 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
@@ -19,6 +17,8 @@ import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.packshop.api.common.exceptions.ResourceNotFoundException;
+import com.packshop.api.modules.identity.dto.AuthRegisterRequest;
 import com.packshop.api.modules.identity.dto.AuthRequest;
 import com.packshop.api.modules.identity.dto.AuthResponse;
 import com.packshop.api.modules.identity.entities.Role;
@@ -45,93 +45,87 @@ public class AuthController {
     @Autowired
     private JwtUtil jwtUtil;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
     @PostMapping("/login")
     public ResponseEntity<AuthResponse> login(@Valid @RequestBody AuthRequest authRequest) {
-        try {
-            authenticationManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(authRequest.getUsername(), authRequest.getPassword()));
-            String token = jwtUtil.generateToken(authRequest.getUsername());
-            String refreshToken = jwtUtil.generateRefreshToken(authRequest.getUsername());
+        authenticationManager.authenticate(
+                new UsernamePasswordAuthenticationToken(authRequest.getUsername(), authRequest.getPassword()));
+        String token = jwtUtil.generateToken(authRequest.getUsername());
+        String refreshToken = jwtUtil.generateRefreshToken(authRequest.getUsername());
 
-            AuthResponse response = new AuthResponse();
-            response.setToken(token);
-            response.setRefreshToken(refreshToken);
-            response.setUsername(authRequest.getUsername());
-            response.setMessage("Login successful");
+        User user = userRepository.findByUsername(authRequest.getUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-            User user = userRepository.findByUsername(authRequest.getUsername()).get();
-            response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
+        AuthResponse response = new AuthResponse();
+        response.setToken(token);
+        response.setRefreshToken(refreshToken);
+        response.setUsername(user.getUsername());
+        response.setFullName(user.getFullName());
+        response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
+        response.setMessage("Login successful");
 
-            return ResponseEntity.ok(response);
-        } catch (AuthenticationException e) {
-            AuthResponse response = new AuthResponse();
-            response.setMessage("Invalid username or password");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
-        }
+        return ResponseEntity.ok(response);
     }
 
     @PostMapping("/register")
-    public ResponseEntity<AuthResponse> register(@Valid @RequestBody User user) {
-        try {
-            user.setPassword(passwordEncoder.encode(user.getPassword()));
-            User savedUser = userService.save(user);
+    public ResponseEntity<AuthResponse> register(@Valid @RequestBody AuthRegisterRequest authRequest) {
+        User user = new User();
+        user.setUsername(authRequest.getUsername());
+        user.setPassword(authRequest.getPassword());
+        user.setEmail(authRequest.getEmail());
+        user.setFullName(authRequest.getFullName());
 
-            AuthResponse response = new AuthResponse();
-            response.setUsername(savedUser.getUsername());
-            response.setRoles(savedUser.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
-            response.setMessage("User registered successfully");
+        User savedUser = userService.save(user);
 
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-        } catch (Exception e) {
-            AuthResponse response = new AuthResponse();
-            response.setMessage("Registration failed: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
-        }
+        AuthResponse response = new AuthResponse();
+        response.setUsername(savedUser.getUsername());
+        response.setFullName(savedUser.getFullName());
+        response.setRoles(savedUser.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
+        response.setMessage("User registered successfully");
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @PostMapping("/refresh")
     public ResponseEntity<AuthResponse> refreshToken(@RequestHeader("Authorization") String authHeader) {
-        if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            String refreshToken = authHeader.substring(7);
-            try {
-                String username = jwtUtil.extractUsername(refreshToken);
-                if (jwtUtil.validateToken(refreshToken, username)) {
-                    String newAccessToken = jwtUtil.generateToken(username);
-
-                    AuthResponse response = new AuthResponse();
-                    response.setToken(newAccessToken);
-                    response.setRefreshToken(refreshToken); // Giữ nguyên refresh token cũ
-                    response.setUsername(username);
-                    response.setMessage("Token refreshed successfully");
-
-                    User user = userRepository.findByUsername(username).get();
-                    response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
-
-                    return ResponseEntity.ok(response);
-                } else {
-                    AuthResponse response = new AuthResponse();
-                    response.setMessage("Invalid refresh token");
-                    return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
-                }
-            } catch (Exception e) {
-                AuthResponse response = new AuthResponse();
-                response.setMessage("Invalid refresh token");
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
-            }
-        } else {
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             AuthResponse response = new AuthResponse();
             response.setMessage("No refresh token provided");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
         }
+
+        String refreshToken = authHeader.substring(7);
+        String username = jwtUtil.extractUsername(refreshToken);
+        if (!jwtUtil.validateToken(refreshToken, username)) {
+            AuthResponse response = new AuthResponse();
+            response.setMessage("Invalid refresh token");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
+        }
+
+        String newAccessToken = jwtUtil.generateToken(username);
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        AuthResponse response = new AuthResponse();
+        response.setToken(newAccessToken);
+        response.setRefreshToken(refreshToken);
+        response.setUsername(username);
+        response.setFullName(user.getFullName());
+        response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
+        response.setMessage("Token refreshed successfully");
+
+        return ResponseEntity.ok(response);
     }
 
     @PutMapping("/update-password")
     public ResponseEntity<AuthResponse> updatePassword(
             @RequestHeader("Authorization") String authHeader,
             @RequestBody Map<String, String> passwordRequest) {
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+            AuthResponse response = new AuthResponse();
+            response.setMessage("Invalid or missing token");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
+        }
+
         String token = authHeader.substring(7);
         String username = jwtUtil.extractUsername(token);
 
@@ -142,7 +136,7 @@ public class AuthController {
         }
 
         String newPassword = passwordRequest.get("newPassword");
-        if (newPassword == null || newPassword.isBlank()) {
+        if (newPassword == null || newPassword.trim().isEmpty()) {
             AuthResponse response = new AuthResponse();
             response.setMessage("New password is required");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
@@ -151,6 +145,7 @@ public class AuthController {
         User updatedUser = userService.updatePassword(username, newPassword);
         AuthResponse response = new AuthResponse();
         response.setUsername(updatedUser.getUsername());
+        response.setFullName(updatedUser.getFullName());
         response.setRoles(updatedUser.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
         response.setMessage("Password updated successfully");
 
@@ -159,20 +154,22 @@ public class AuthController {
 
     @GetMapping("/me")
     public ResponseEntity<AuthResponse> getCurrentUser(Authentication authentication) {
-        if (authentication != null && authentication.isAuthenticated()) {
-            String username = authentication.getName();
-            User user = userRepository.findByUsername(username).get();
-
-            AuthResponse response = new AuthResponse();
-            response.setUsername(username);
-            response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
-            response.setMessage("User info retrieved successfully");
-
-            return ResponseEntity.ok(response);
-        } else {
+        if (authentication == null || !authentication.isAuthenticated()) {
             AuthResponse response = new AuthResponse();
             response.setMessage("Not authenticated");
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(response);
         }
+
+        String username = authentication.getName();
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        AuthResponse response = new AuthResponse();
+        response.setUsername(username);
+        response.setFullName(user.getFullName());
+        response.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toSet()));
+        response.setMessage("User info retrieved successfully");
+
+        return ResponseEntity.ok(response);
     }
 }
